Make the daemon process a true daemon by calling setsid().

PR:		bin/3202
Submitted by:	Dmitrij Tejblum <dima@tejblum.dnttm.rssi.ru>